loopdowhile.LoopDoWhile.scala.code
do {
   avance
}while (getCouleurSol!= color.lightGray)
;